--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
-    "axios": "^1.13.2",
     "expo": "^54.0.27",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
@@ -39,14 +38,13 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
-    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.28.0",
-    "react-native-reanimated": "^4.1.1",
     "react-native-safe-area-context": "5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.15.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "react-native-worklets-core": "^1.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
