--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "lint": "expo lint"
   },
   "dependencies": {
-    "@expo/ngrok": "^4.1.3",
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "axios": "^1.13.2",
     "expo": "^54.0.27",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
@@ -38,12 +38,14 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.28.0",
-    "react-native-safe-area-context": "5.6.0",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.15.0",
-    "react-native-worklets": "0.5.1",
+    "react-native-worklets": "~0.5.1",
     "react-native-worklets-core": "^1.6.2"
   },
   "devDependencies": {
