--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 EXPO_TUNNEL_SUBDOMAIN=mobile-mirror-16
 EXPO_PACKAGER_HOSTNAME=https://mobile-mirror-16.preview.emergentagent.com
+EXPO_PACKAGER_PROXY_URL=https://mobile-mirror-16.ngrok.io
 EXPO_PUBLIC_BACKEND_URL=https://mobile-mirror-16.preview.emergentagent.com
 EXPO_USE_FAST_RESOLVER="1"
 METRO_CACHE_ROOT=/app/frontend/.metro-cache
